--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -26,7 +26,7 @@
       </ion-button>
     </ion-col>
     <ion-col size="4">
-      <ion-button (click)="addEvent()" expand="block" fill="outline">
+      <ion-button (click)="addEventPrompt()" expand="block" fill="outline">
         Add event
       </ion-button>
     </ion-col>
@@ -36,7 +36,54 @@
       </ion-button>
     </ion-col>
   </ion-row>
- 
+
+  <ion-popover [isOpen]="isPopoverOpen"  backdropDismiss="false" id="popover-bottom">
+    <ng-template>
+      <div>
+      <ion-item>
+        <ion-label><h1>Add Event</h1></ion-label>
+      </ion-item>
+
+      <ion-item lines="none">
+        
+    <ion-label position="floating">Meeting Room</ion-label>
+      <ion-select interface="popover" [(ngModel)]="event.meetingRoom">
+        <ion-select-option value="MR1">MR1</ion-select-option>
+        <ion-select-option value="MR2">MR2</ion-select-option>
+        <ion-select-option value="MR3">MR3</ion-select-option>
+        <ion-select-option value="MR4">MR4</ion-select-option>
+      </ion-select>
+    </ion-item>
+    
+      <ion-item lines="none">
+        <ion-label position="floating">Event</ion-label>
+        <ion-input type="text" [autocomplete]="off" name="event_name" [(ngModel)]="event.name" required></ion-input>
+      </ion-item>
+      <ion-item lines="none">
+        <!-- <ion-label>From</ion-label> -->
+        <ion-label><b>{{event.formattedDate}}</b></ion-label>
+        <!-- <ion-input disabled="true" type="date" name="start-date" [ngModel]="event.startTime | date:'yyyy-MM-dd'" required></ion-input> -->
+      </ion-item>
+      <ion-item lines="none">
+        <ion-label>All Day</ion-label>
+        <ion-checkbox color="primary" [(ngModel)]="event.allDay"></ion-checkbox>
+      </ion-item>
+      <ion-item lines="none">
+        <ion-label>To</ion-label>
+        <ion-datetime disabled="{{event.allDay}}" presentation="time" name="end-date" [(ngModel)]="event.endDate"></ion-datetime>
+        <!-- <ion-input  type="date" name="end-date" [(ngModel)]="event.endDate" required></ion-input> -->
+      </ion-item>
+    <ion-row>
+    <ion-col size="10" class="ion-text-center">
+      <ion-button (click)="addEvents()">Add</ion-button>
+      <ion-button (click)="dismissPopOver()">Cancel</ion-button>
+    </ion-col>
+  </ion-row>
+</div>
+
+    </ng-template>
+  </ion-popover>
+
   <ion-row>
     <!-- Move back one screen of the slides -->
     <ion-col size="2">
@@ -118,8 +165,8 @@
     (onEventSelected)="onEventSelected($event)"
     (onTitleChanged)="onViewTitleChanged($event)"
     (onTimeSelected)="onTimeSelected($event)"
-    startHour="6"
-    endHour="20"
+    startHour="0"
+    endHour="23"
     step="30"
     startingDayWeek="1"
   >
