--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -78,3 +78,11 @@
     line-height: 15px;
     text-align: initial;
 }
+
+ion-popover#popover-bottom::part(content) {
+  top: unset !important;
+  left: 0 !important;
+  bottom: 0;
+  width: 100vw;
+  border-radius: 0;
+}
